test/log/shift/vwsra_wx_i32_m.txt
vwsra_wx_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwsra_wx_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwsra_wx_i32_m.c:30:6: warning: no previous prototype for 'vwsra_wx_i32_m_golden' [-Wmissing-prototypes]
   30 | void vwsra_wx_i32_m_golden(uint64_t *mask,int16_t *maskoff,int32_t *a,uint32_t b,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vwsra_wx_i32_m.c: In function 'vwsra_wx_i32_m_golden':
vwsra_wx_i32_m.c:32:32: error: invalid operands to binary >> (have 'uint64_t' {aka 'long long unsigned int'} and 'int16_t *' {aka 'short int *'})
   32 |         exp_result[i] = mask[i]>>maskoff;
      |                         ~~~~~~~^~
      |                             |
      |                             uint64_t {aka long long unsigned int}
vwsra_wx_i32_m.c:30:69: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vwsra_wx_i32_m_golden(uint64_t *mask,int16_t *maskoff,int32_t *a,uint32_t b,int32_t *exp_result) {
      |                                                            ~~~~~~~~~^
vwsra_wx_i32_m.c:30:80: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vwsra_wx_i32_m_golden(uint64_t *mask,int16_t *maskoff,int32_t *a,uint32_t b,int32_t *exp_result) {
      |                                                                       ~~~~~~~~~^
vwsra_wx_i32_m.c: In function 'main':
vwsra_wx_i32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 32, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vwsra_wx_i32_m.c:61:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   61 |     result = vwsra_wx_i32_m(mask,maskoff,a,b);
      |     ^~~~~~
vwsra_wx_i32_m.c:61:29: error: incompatible type for argument 1 of 'vwsra_wx_i32_m'
   61 |     result = vwsra_wx_i32_m(mask,maskoff,a,b);
      |                             ^~~~
      |                             |
      |                             bool32_t
In file included from vwsra_wx_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1229:1: note: expected 'bool16_t' but argument is of type 'bool32_t'
 1229 | __RUGRATS_WX_OP (sra, i, int, uint, 32, 32, 16)
      | ^~~~~~~~~~~~~~~
vwsra_wx_i32_m.c:61:34: error: incompatible type for argument 2 of 'vwsra_wx_i32_m'
   61 |     result = vwsra_wx_i32_m(mask,maskoff,a,b);
      |                                  ^~~~~~~
      |                                  |
      |                                  int16x32_t
In file included from vwsra_wx_i32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1229:1: note: expected 'int32x16_t' but argument is of type 'int16x32_t'
 1229 | __RUGRATS_WX_OP (sra, i, int, uint, 32, 32, 16)
      | ^~~~~~~~~~~~~~~
vwsra_wx_i32_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsra_wx_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwsra_wx_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwsra_wx_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwsra_wx_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed